fix: enforce rag evidence invariants